Img on mobile fixed

--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -3,7 +3,7 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  max-height: 420px;
+  min-height: 420px;
 }
 .card__image__wrapper {
   width: 100%;
