--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -44,8 +44,8 @@
     grid-row-gap: 20px;
   }
   .projects__item {
-    max-width: 420px;
-    min-width: 370px;
+    max-width: 380px;
+    min-width: 350px;
     margin-left: auto;
     margin-right: auto;
   }
